Bug 250811 - ASSERTION FAILED: isCustomPropertyName(name) in WebCore::Style::CustomPropertyRegistry::get
Summary: ASSERTION FAILED: isCustomPropertyName(name) in WebCore::Style::CustomPropert...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: CSS (show other bugs)
Version: Other
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Antti Koivisto
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-01-18 16:44 PST by Ryan Haddad
Modified: 2023-01-19 10:46 PST (History)
5 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ryan Haddad 2023-01-18 16:44:04 PST
At least the three following tests are failing a new assertion added with https://commits.webkit.org/258991@main

fast/css/variables/env/invalid-env-name-fallback.html
fast/css/variables/test-suite/166.html
imported/w3c/web-platform-tests/css/css-variables/variable-declaration-29.html

ASSERTION FAILED: isCustomPropertyName(name)
style/CustomPropertyRegistry.cpp(45) : const WebCore::CSSRegisteredCustomProperty *WebCore::Style::CustomPropertyRegistry::get(const WTF::AtomString &) const
1   0x144053de4 WTFCrash
2   0x105fa4790 WTFCrashWithInfo(int, char const*, char const*, int)
3   0x10b398ae8 WebCore::Style::CustomPropertyRegistry::get(WTF::AtomString const&) const
4   0x108d98854 WebCore::CSSVariableReferenceValue::resolveVariableFallback(WTF::AtomString const&, WebCore::CSSParserTokenRange, WebCore::Style::BuilderState&) const
5   0x108d98dc0 WebCore::CSSVariableReferenceValue::resolveVariableReference(WebCore::CSSParserTokenRange, WebCore::CSSValueID, WTF::Vector<WebCore::CSSParserToken, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc>&, WebCore::Style::BuilderState&) const
6   0x108d98ad0 WebCore::CSSVariableReferenceValue::resolveTokenRange(WebCore::CSSParserTokenRange, WebCore::Style::BuilderState&) const
7   0x108d99330 WebCore::CSSVariableReferenceValue::resolveVariableReferences(WebCore::Style::BuilderState&) const
8   0x108ed5668 WebCore::CSSParser::parseValueWithVariableReferences(WebCore::CSSPropertyID, WebCore::CSSValue const&, WebCore::Style::BuilderState&)
9   0x10b3ef9c0 WebCore::Style::Builder::resolveVariableReferences(WebCore::CSSPropertyID, WebCore::CSSValue&)
10  0x10b3ef04c WebCore::Style::Builder::applyProperty(WebCore::CSSPropertyID, WebCore::CSSValue&, WebCore::SelectorChecker::LinkMatchMask)
11  0x10b40be54 WebCore::Style::Builder::applyCascadeProperty(WebCore::Style::PropertyCascade::Property const&)::'lambda'(WebCore::SelectorChecker::LinkMatchMask)::operator()(WebCore::SelectorChecker::LinkMatchMask) const
12  0x10b3ee5e4 WebCore::Style::Builder::applyCascadeProperty(WebCore::Style::PropertyCascade::Property const&)
13  0x10b3ee404 WebCore::Style::Builder::applyDeferredProperties()
14  0x10b3ee288 WebCore::Style::Builder::applyNonHighPriorityProperties()
15  0x10b44653c WebCore::Style::Resolver::applyMatchedProperties(WebCore::Style::Resolver::State&, WebCore::Style::MatchResult const&)
16  0x10b444b18 WebCore::Style::Resolver::styleForElement(WebCore::Element const&, WebCore::Style::ResolutionContext const&, WebCore::RuleMatchingBehavior)
17  0x10b453dcc WebCore::Style::TreeResolver::styleForStyleable(WebCore::Styleable const&, WebCore::Style::TreeResolver::ResolutionType, WebCore::Style::ResolutionContext const&)
18  0x10b454348 WebCore::Style::TreeResolver::resolveElement(WebCore::Element&, WebCore::RenderStyle const*, WebCore::Style::TreeResolver::ResolutionType)
19  0x10b4577d8 WebCore::Style::TreeResolver::resolveComposedTree()
20  0x10b458a4c WebCore::Style::TreeResolver::resolve()
21  0x1091f6b90 WebCore::Document::resolveStyle(WebCore::Document::ResolveStyleType)
22  0x1091f7a78 WebCore::Document::updateStyleIfNeeded()
23  0x109213cb0 WebCore::Document::finishedParsing()
24  0x109a6b574 WebCore::HTMLConstructionSite::finishedParsing()
25  0x109ab3bb8 WebCore::HTMLTreeBuilder::finished()
26  0x109a7383c WebCore::HTMLDocumentParser::end()
27  0x109a71778 WebCore::HTMLDocumentParser::attemptToRunDeferredScriptsAndEnd()
28  0x109a714d0 WebCore::HTMLDocumentParser::prepareToStopParsing()
29  0x109a738a8 WebCore::HTMLDocumentParser::attemptToEnd()
30  0x109a73978 WebCore::HTMLDocumentParser::finish()
31  0x109f502e4 WebCore::DocumentWriter::end()

https://results.webkit.org/?suite=layout-tests&suite=layout-tests&suite=layout-tests&test=fast%2Fcss%2Fvariables%2Fenv%2Finvalid-env-name-fallback.html&test=fast%2Fcss%2Fvariables%2Ftest-suite%2F166.html&test=imported%2Fw3c%2Fweb-platform-tests%2Fcss%2Fcss-variables%2Fvariable-declaration-29.html
Comment 1 Radar WebKit Bug Importer 2023-01-18 16:44:16 PST
<rdar://problem/104403704>
Comment 2 Antti Koivisto 2023-01-19 05:04:50 PST
Pull request: https://github.com/WebKit/WebKit/pull/8828
Comment 3 EWS 2023-01-19 10:46:17 PST
Committed 259096@main (59be4482527c): <https://commits.webkit.org/259096@main>

Reviewed commits have been landed. Closing PR #8828 and removing active labels.