ASSERTION FAILED: isCustomPropertyName(name) in WebCore::Style::CustomPropertyRegistry::get https://bugs.webkit.org/show_bug.cgi?id=250811 <rdar://problem/104403704>

Reviewed by Antoine Quint.

This new assertion revealed two bugs.

* LayoutTests/TestExpectations:

New PASSes under web-platform-tests/css/css-variables.

* LayoutTests/fast/css/variables/test-suite/062-expected.html: Removed.
* LayoutTests/fast/css/variables/test-suite/062.html: Removed.
* LayoutTests/fast/css/variables/test-suite/166-expected.html: Removed.
* LayoutTests/fast/css/variables/test-suite/166.html: Removed.

These are the same as the tests under web-platform-tests/css/css-variables with wrong expected results.

* Source/WebCore/css/CSSVariableReferenceValue.cpp:
(WebCore::CSSVariableReferenceValue::resolveVariableFallback const):

Don't try to look up env() variables from custom property registry in fallback resolution.

(WebCore::CSSVariableReferenceValue::resolveVariableReference const):
* Source/WebCore/css/CSSVariableReferenceValue.h:
* Source/WebCore/css/parser/CSSPropertyParser.cpp:
(WebCore::isCustomPropertyName):
* Source/WebCore/css/parser/CSSPropertyParser.h:
* Source/WebCore/css/parser/CSSVariableParser.cpp:
(WebCore::CSSVariableParser::isValidVariableName):

This function incorrecty accepted '--' as valid variable name while isCustomPropertyName() didn't.
Fix by just calling isCustomPropertyName().

* Source/WebCore/css/parser/CSSVariableParser.h:

Canonical link: https://commits.webkit.org/259096@main