Source/WebCore/css/parser/CSSVariableParser.h
@@ -46,7 +46,6 @@ public:
     static RefPtr<CSSCustomPropertyValue> parseInitialValueForUniversalSyntax(const AtomString&, CSSParserTokenRange);
 
     static bool isValidVariableName(const CSSParserToken&);
-    static bool isValidVariableName(const String&);
 };
 
 } // namespace WebCore
